feat: switch to SQL Server, add controllers, update schema and properties